# University-tasks

./: .gitignore  .gitmodules  Inf_lab#1.cpp  Inf_lab2.cpp  Inf_lab3.cpp  Inf_lab4.cpp  Inf_lab_1.cpp  MP_lab2.cpp  PM_lab2.cpp  PM_lab_1.cpp  PM_lab_1_add.cpp  PM_lab_3.cpp  PM_lab_4.cpp  PM_lab_5.cpp  README.md  db_visuals.py  generator.py  sem1_Inf_lab1.cpp  sem1_Inf_lab2.cpp  sem1_Inf_lab4.cpp  sem1_PM_lab_1.cpp  sem1_PM_lab_3.cpp  sem1_PM_lab_4.cpp  sem2_BoPLT_lab_1.cpp  sem2_BoPLT_lab_2.cpp  sem2_BoPLT_lab_3.cpp  sem2_BoPLT_lab_4.cpp  sem2_PLandDS_lab_1.cpp  sem2_PLandDS_lab_2.cpp  sem2_PLandDS_lab_3.cpp  sem2_PLandDS_lab_4.cpp  sem2_PLandSD_lab_5.cpp  sem2_homework(april-27th).cpp  sem2_homework(april_27th).cpp  sem2_homework(april_8th).cpp  sem3_Python-practice-notes(1).ipynb  sem3_Python-practice-notes(2).ipynb  sem3_Python-practice-notes(3).ipynb  sem3_Python-practice-notes(4).ipynb  sem3_Python-practice-notes(5).ipynb  (+45 more)
celeste/: celeste.py  gridworld.py  input.py  main.py  mario_tutorial.ipynb  pico.py  requirements.txt  utils.py
cg/: cg.py
diplomus/: .gitignore  README.md  debug.py  log.txt  main.py  qlearning.py  qtable.csv  req.txt  tests.py  utils.py
lab6/: save.json
sem3_Lab-2/: Main.java
sem3_Lab-3/: Main.java
sem3_Lab-4/: Main.java
sem3_Lab-5/: Main.java
sem3_Lab-7/: Main.java
sem3_Lab8/: Main.java
sem6_opt_methods/: Cargo.toml
sem6_opt_methods/data/: simplex_tasks.json
sem6_opt_methods/src/: classnotes.rs  common.rs  lab1.rs  lab2.rs  lab3.rs  lab4.rs
sem7_ML/: input.txt  lab0.py  lab1.py  lab1_logistic_regression.ipynb  lab2.py  (+3 more)
(+152 files in other folders)
