[package]
name = "sem6_opt_methods"
version = "0.1.0"
edition = "2021"

[dependencies]

# [[bin]]
# name = "classnotes"
# path = "src/classnotes.rs"

[[bin]]
name = "lab1"
path = "src/lab1.rs"

[[bin]]
name = "lab2"
path = "src/lab2.rs"

[[bin]]
name = "lab3"
path = "src/lab3.rs"

[[bin]]
name = "lab4"
path = "src/lab4.rs"
